# $Id: Makefile.am,v 1.5 2004/10/20 08:41:07 mike Exp $
#
# Copyright (c) 1998 - 2010 Mike D. Schiffman <mike_schiffman@hotmail.com>
# All rights reserved.
#
# Process this file with automake to produce a Makefile.in script.

#include $(top_srcdir)/Makefile.am.common

# SUBDIRS = src support
SUBDIRS = src

#EXTRA_DIST = Makefile.am.common

install:
